Added selector for Gender and Race to front screen (selected information)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="advertisement_date_file">advertisement_date</string>
     <string name="advertisement_shared_date_long">advertisement_long</string>
     <string name="ad_unit_id">ca-app-pub-3225017918525788/8965392956</string>
+    <string name="npc_image">Npc Image</string>
     <!-- END OF ADVERTISER TAGS -->
 </resources>
