Further development of OpenNpcActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,8 @@
     <string name="ad_unit_id">ca-app-pub-3225017918525788/8965392956</string>
     <string name="npc_image">Npc Image</string>
     <string name="npc_key_intent_open_npc_activity">npc</string>
+    <string name="edit">Edit</string>
+    <string name="save_changes">Save Changes</string>
+    <string name="cancel_changes">Cancel Changes</string>
     <!-- END OF ADVERTISER TAGS -->
 </resources>
