--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <!-- NavBar -->
     <string name="nav_bar_random_npc">Randomize</string>
     <string name="nav_bar_my_npcs">NPCs</string>
+    <string name="random_npc_language_hint">Language</string>
+    <string name="personality_traits_label">Personality Traits</string>
+    <string name="random_npc_personality_hint">Personality Trait</string>
+    <string name="randomize_all">Randomize All</string>
+    <string name="save">Save</string>
 </resources>
