--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="nav_bar_random_npc">Randomize</string>
     <string name="nav_bar_my_npcs">NPCs</string>
+    <string name="nav_bar_settings">Settings</string>
 </resources>
