--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="title_activity_main">MainActivity</string>
-
+    <string name="app_name">@string/app_name_en</string>
+    
     <string name="nav_bar_random_npc">Randomize</string>
     <string name="nav_bar_my_npcs">NPCs</string>
     <string name="nav_bar_settings">Settings</string>
